--- a/src/css/login.css
+++ b/src/css/login.css
@@ -294,7 +294,7 @@
   content: "\e60a";
 }
 
-.icon-password:before {
+.icon-password111:before {
   content: "\e82b";
 }
 
@@ -373,8 +373,8 @@ html, body {
 .mid_img {
   width: 100%;
   height: 477px;
-  background: url("../img/zhuce_bg.png");
-  background-size: 110% 100%;
+  background: url("../img/deng_bg.png");
+  background-size: 100% 100%;
 }
 
 .mid .kuang {
@@ -391,7 +391,8 @@ html, body {
 }
 
 .error {
-  color: #f60;
+  display: inline-block;
+  color: #000;
 }
 
 .mail {
@@ -400,19 +401,16 @@ html, body {
   border-bottom: 1px solid #ccc;
   text-align: center;
   line-height: 30px;
+  position: relative;
 }
 
 .mail span {
-  width: 120px;
-  height: 16px;
-  padding: 0 10px;
-  color: #666;
-}
-
-.mail span:hover {
-  background-color: #000;
-  color: #fff;
-  border-radius: 5px 5px 0 0;
+  position: absolute;
+  bottom: 15px;
+  left: 0;
+  height: 20px;
+  color: #999;
+  font-size: 16px;
 }
 
 .login p {
@@ -426,65 +424,88 @@ html, body {
 }
 
 .login p:nth-child(2) {
-  padding-left: 14px;
+  padding-left: 70px;
   margin-top: 26px;
 }
 
-.username {
-  position: relative;
-}
-
-.y_mail {
-  position: absolute;
-  top: 88px;
-  right: 23px;
-  display: inline-block;
-  width: 70px;
-  height: 25px;
-  text-align: center;
-  line-height: 25px;
-  font-size: 12px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-}
-
 .login p:nth-child(3) {
-  padding-left: 36px;
+  padding-left: 70px;
+}
+
+.login p:nth-child(4) {
+  padding-left: 70px;
+}
+
+.login p:nth-child(4) > a {
+  padding-left: 30px;
+  color: #BA8668;
+  text-decoration: underline;
 }
 
 .login p:nth-child(5) {
-  padding-left: 60px;
+  padding-left: 70px;
 }
 
-.login p:nth-child(6) {
-  padding-left: 73px;
-}
-
-.login p:nth-child(6) button {
-  width: 210px;
+.login p:nth-child(5) button {
+  width: 211px;
   height: 30px;
   background-color: #CF0101;
   color: #fff;
   border: 0;
 }
 
-.login p:nth-child(7) {
-  padding-left: 192px;
+.login p:nth-child(6) {
+  padding-left: 172px;
 }
 
-.login p:nth-child(7) > a {
+.login p:nth-child(6) > a {
   color: #BA8668;
   text-decoration: underline;
 }
 
-.login p:nth-child(8) {
+.login p:nth-child(7) {
   border-top: 1px solid #ccc;
   padding-top: 25px;
-  padding-left: 62px;
+  padding-left: 55px;
 }
 
-.login p:nth-child(8) > a {
-  color: red;
+.login .hezuo {
+  width: 331px;
+  height: 60px;
+  margin-left: 55px;
+  position: relative;
+  margin-top: 10px;
+}
+
+.hezuo a {
+  display: inline-block;
+  position: absolute;
+  width: 82px;
+  height: 20px;
+}
+
+.hezuo a:nth-child(1) {
+  left: 0;
+  top: 0;
+  background: url("../img/sp.png") 0px -3766px no-repeat;
+}
+
+.hezuo a:nth-child(2) {
+  left: 84px;
+  top: 0;
+  background: url("../img/sp.png") 0px -3786px no-repeat;
+}
+
+.hezuo a:nth-child(3) {
+  left: 168px;
+  top: 0;
+  background: url("../img/sp.png") 0px -3806px no-repeat;
+}
+
+.hezuo a:nth-child(4) {
+  left: 0px;
+  top: 22px;
+  background: url("../img/sp.png") 0px -3826px no-repeat;
 }
 
 .footer {
