--- a/src/lib/jquery-gdsZoom/jquery.gdsZoom.css
+++ b/src/lib/jquery-gdsZoom/jquery.gdsZoom.css
@@ -1,5 +1,8 @@
 .gds-zoom{position:relative;width:430px;overflow:hidden;}
 .gds-zoom img{display:block;}
-.gds-zoom .minzoom{display:none;position: absolute;width:30px;height:30px;border:1px solid #ccc;background-color:#ff0;background-color: rgba(190,240,255,.3);filter:alpha(Opacity=30);}
-.gds-bigzoom{display:none;position: absolute;width:300px;height:300px;overflow:hidden;}
+.gds-zoom .minzoom{
+	border-radius: 50%;
+	display:none;
+	position: absolute;width:30px;height:30px;border:1px solid #ccc;background-color:#ff0;background-color: rgba(190,240,255,.3);filter:alpha(Opacity=30);}
+.gds-bigzoom{display:none;position: absolute;width:300px;height:300px;overflow:hidden;border:1px solid #ccc;}
 .gds-bigzoom img{position: absolute;left:0;right:0;}
