--- a/src/sass/car.scss
+++ b/src/sass/car.scss
@@ -480,401 +480,13 @@
 		display: block;
 	}
 
-//上主图
-	.d_img{
-		width: 100%;
-		height: 616px;
-		background-color: #fff;
-	}
-	.d_img .container{
-		overflow: hidden;
-	}
-	//左图
-	.d_l{
-		float: left;
-		width: 486px;
-		height: 616px;
-		position: relative;
-	}
-	.d_l_zhu{
-		position: absolute;
-		left: 5px;
-		top: 35px;
-		width: 430px;
-		height: 430px;
-		box-shadow: 0px 0px 15px #666;
-	}
-	.d_l_ci{
-		position: absolute;
-		bottom: 46px;
-		left: 55px;
-		width: 430px;
-		height: 69px;
-		background-color: #ccc;
-	}
+.car_top{
+	width: 100%;
+	height: 45px;
+	background-color: #ccc;
+}
 
-	//右图
-	.d_r{
-		float: left;
-		width: 514px;
-		height: 616px;
-		box-sizing:border-box;
-		padding-top: 35px;
-	}
-	//右图上
-	.d_r_t{
-		width: 514px;
-		height: 111px;
-		background-color: #fff;
-		border-bottom:1px dashed #333;
-	}
-	.d_r_t p:nth-child(1){
-		font-size: 16px;
-		color:#999;
-		line-height: 30px;
-	}
-	.d_r_t p:nth-child(2){
-		font-size: 18px;
-		color:#999;
-		line-height: 20px;
-		font-weight: bold;
-	}
-	.d_r_t p:nth-child(3){
-		font-size: 13px;
-		color:#333;
-		line-height: 30px;
-	}
-	.d_r_t p:nth-child(4){
-		font-size: 12px;
-		color:#999;
-	}
-	//右图中
-	.d_r_m{
-		width: 514px;
-		height: 363px;
-		border-bottom:1px dashed #333;
-	}
-	.jia{
-		display: block;
-		width: 514px;
-		height: 49px;
-	}
-	.jia span{
-		color:#D00000;
-	}
-	.jia span:nth-child(1){
-		display: inline-block;
-		width: 77px;
-		height: 49px;
-		font-size: 13px;
-		line-height: 49px;
-		font-weight: bold;
 
-	}
-	.jia span:nth-child(2) a{
-		display: inline-block;
-		width: 140px;
-		height: 49px;
-		font-size: 21px;
-		line-height: 49px;
-		font-weight: bold;
-		color:#D00000;
-	}
-	.jia span:nth-child(3) a{
-		display: inline-block;
-		width: 74px;
-		height: 20px;
-		background-color: #232524;
-		color:#D19F6E;
-		line-height: 20px;
-		box-sizing:border-box;
-		padding-left: 5px;
-		margin-left: 10px;
-	}
-	.zhuangui{
-		width: 514px;
-		height: 96px;
-	}
-	.zhuangui p{
-		font-size: 12px;
-		color:#ccc;
-		line-height: 22px;
-	}
-	.zhuangui p:nth-child(3),.zhuangui p:nth-child(4){
-		color:#D00000;
-	}
-	.d_r_m .se{
-		width: 514px;
-		height: 45px;
-	}
-	.se span:nth-child(1){
-		line-height: 45px;
-		color:12px;
-		color:#000;
-
-	}
-	.se span:nth-child(2){
-		margin-left: 20px;
-		display: inline-block;
-		width: 39px;
-		height: 27px;
-		border:1px solid #D00000;
-		line-height: 27px;
-		color:12px;
-		text-align: center;
-	}
-	.shu{
-		width: 514px;
-		height: 35px;
-	}
-	.shu span{
-		display: inline-block;
-		line-height: 35px;
-	}
-	.shu button{
-		margin-left: 20px;
-		display: inline-block;
-		background-color: #fff;
-	}
-	.shu input{
-		margin-left: 20px;
-		width: 60px;
-		height: 25px;
-	}
-	//温馨提示
-	.wen{
-		width: 514px;
-		height: 69px;
-	}
-	.wen>p{
-		line-height: 22px;
-	}
-	.wen>p a{
-		color:#CEA06E;
-		margin-left: 20px;
-	}
-	//立即购买
-	.liji{
-		width: 514px;
-		height: 69px;	
-		position: relative;
-	}
-	.liji a{
-		display: inline-block;
-		color:#fff;
-		position: absolute;
-	}
-	.liji span:nth-child(1) a{
-		width: 137px;
-		height: 35px;
-		background-color: #D31920;
-		text-align: center;
-		line-height: 35px;
-		font-size: 14px;
-		left: 0;
-		top: 15px;
-	}
-	.liji span:nth-child(2) a{
-		width: 137px;
-		height: 35px;
-		background-color: #E66B2D;
-		text-align: center;
-		line-height: 35px;
-		font-size: 14px;
-		left: 145px;
-		top: 15px;
-	}
-	.liji span:nth-child(3) a{
-		width: 74px;
-		height: 21px;
-		background-color: #D31920;
-		text-align: center;
-		line-height: 21px;
-		font-size: 12px;
-		left: 312px;
-		top: 22px;
-	}
-	//环球
-	.qiu{
-		width: 514px;
-		height: 105px;
-	}
-	.qiu_t{
-		width: 514px;
-		height: 54px;
-	}
-	.qiu_t span{
-		display: inline-block;
-		line-height: 70px;
-		padding:0 20px;
-	}
-	.qiu_t span:nth-child(5){
-		display: inline-block;
-		line-height: 54px;
-		padding:0 34px;
-	}
-	.qiu_t span i{
-		font-size: 30px;
-		color:#666;
-	}
-	.qiu_b{
-		width: 514px;
-		height: 51px;
-	}
-	.qiu_b span{
-		display: inline-block;
-		// line-height: 54px;
-		padding:0 11px;
-	}
-	.d_g{
-		width: 100%;
-		height: 7753px;
-	}
-	.d_g .container{
-		overflow: hidden;
-	}
-	//左
-	.dateils{
-		float: left;
-		width: 800px;
-		height: 7753px;
-		background-color: #fff;
-	}
-	
-	//3ge
-	.dd01{
-		width: 800px;
-		height: 28px;
-		background-color: #ccc;
-	}
-	.dd01 span{
-		display: inline-block;
-		width: 260px;
-		height: 26px;
-		border:1px solid #888;
-		padding:0 1px;
-		background-color: #fff;
-		text-align: center;
-		line-height: 26px;
-		font-weight: bold;
-	}
-	.dd01 span:hover{
-		background-color: #333;
-	}
-	.dd01 span:hover a{
-		color:#fff;
-	}
-	.dateils>div{
-		width: 800px;
-	}
-	//圆钮
-	.dd02{
-		height: 66px;
-		background: url('../img/suoyin01.png') no-repeat;
-	}
-	//详情页
-	.ddd00{
-		height: 1044px;
-		background: url('../img/ddd00.png') no-repeat;
-	}
-	.ddd01{
-		height: 421px;
-		background: url('../img/ddd01.png') no-repeat;
-	}
-	.ddd02{
-		height: 230px;
-		background: url('../img/ddd02.png') no-repeat;
-	}
-	.ddd03{
-		height: 932px;
-		background: url('../img/ddd03.png') no-repeat;
-	}
-	.ddd04{
-		height: 941px;
-		background: url('../img/ddd04.png') no-repeat;
-	}
-	.ddd05{
-		height: 915px;
-		background: url('../img/ddd05.png') no-repeat;
-	}
-	.ddd06{
-		height: 896px;
-		background: url('../img/ddd06.png') no-repeat;
-	}
-	.ddd07{
-		height: 824px;
-		background: url('../img/ddd07.png') no-repeat;
-	}
-	.ddd08{
-		height: 554px;
-		background: url('../img/ddd08.png') no-repeat;
-	}
-	.ddd09{
-		height: 805px;
-		background: url('../img/ddd09.png') no-repeat;
-	}
-	//右
-	.goods{
-		float: right;
-		width: 200px;
-		height: 7753px;
-		padding-left: 23px;
-		box-sizing:border-box;
-	}
-	.goods>div{
-		width: 170px;
-	}
-	.gg00 a{
-		display: block;
-		height: 142px;
-		background: url('../img/gg00.png') no-repeat;
-	}
-	.gg00:hover{
-		opacity: 0.6;
-	}
-	.gg01 a{
-		display: block;
-		height: 164px;
-		background: url('../img/gg01.png') no-repeat;
-		margin-top: 11px;
-	}
-	.gg01:hover{
-		opacity: 0.6;
-	}
-	//商品模板
-	.goods00{
-		// height: 408px;
-		width: 170px;
-		// background-color: #ccc;
-		border:1px solid #ccc;
-		margin-top: 26px;
-	}
-	//商品
-	.g_t{
-		width: 170px;
-		height: 40px;
-		background-color: #D00000;
-		line-height: 40px;
-		text-align: center;
-		color:#fff;
-		font-size: 14px;
-	}
-	.g_m a{
-		display: block;
-		width: 170px;
-		height: 130px;
-		background: url('../img/goods00.png') no-repeat;
-	}
-	.g_b{
-		width: 170px;
-		height: 49px;
-		text-align: center;
-		line-height: 24px;
-	}
-	.g_m:hover a{
-		opacity: 0.6;
-	}
-	
 //footer
 
 	.footer{
