--- a/src/lib/jquery.Carousel/jquery.xq_Carousel.css
+++ b/src/lib/jquery.Carousel/jquery.xq_Carousel.css
@@ -1,12 +1,12 @@
-.lxCarousel	{margin:0 auto;width:311px;height:69px;overflow:hidden;}
+.lxCarousel	{margin:0 auto;width:511px;height:69px;overflow:hidden;}
 .lxCarousel ul{position:relative;left:0;top:0;}
 .lxCarousel li{overflow:hidden;}
 .lxCarousel .horizontal{overflow:hidden;}
-.lxCarousel .horizontal li{float:left;}
-.lxCarousel li img{display:block;}
+.lxCarousel .horizontal li{float:left;background-color: #fff;}
+.lxCarousel li img{display:block;padding-left: 70px;}
 .lxCarousel .page{position: absolute;right:450px;bottom:15px;background-color: #918F8F;opacity: 0.8;padding: 3px 20px;}
 .lxCarousel .page span{display:inline-block;margin:0 5px;width:12px;height:12px;line-height:12px;border:1px solid #fff;text-align:center;background-color:#efefef;border-radius:50%;}
 .lxCarousel .page span.active{background-color:#CC0001;color:#CC0001;}
-.lxCarousel .prev,.next{position: absolute;width:30px;height:30px;line-height:30px;background-color:#ccc;color:#000;text-align:center;opacity: 0.7;}
+.lxCarousel .prev,.next{position: absolute;width:30px;height:60px;line-height:60px;background-color:#ccc;color:#000;text-align:center;opacity: 0.7;}
 .lxCarousel .prev{left:30px;top:0;bottom:0;margin:auto 0;}
-.lxCarousel .next{right:30px;top:50%;margin-top:-15px;}
+.lxCarousel .next{right:30px;top:50%;margin-top:-30px;}
