--- a/src/css/login_suc.css
+++ b/src/css/login_suc.css
@@ -363,135 +363,30 @@ html, body {
   font-size: 14px;
 }
 
-.mid {
+.scu {
   width: 100%;
-  height: 680px;
-  background-color: #E9E7E8;
-  position: relative;
-}
-
-.mid_img {
-  width: 100%;
-  height: 477px;
-  background: url("../img/zhuce_bg.png");
-  background-size: 110% 100%;
-}
-
-.mid .kuang {
-  position: absolute;
-  right: 153px;
-  top: 47px;
-  width: 450px;
-  height: 550px;
-  z-index: 111px;
+  height: 300px;
   background-color: #fff;
-  box-shadow: 0px 0px 15px #888;
-  box-sizing: border-box;
-  padding-left: 58px;
-}
-
-.error {
-  display: inline-block;
-  color: #ff0000;
-}
-
-.mail {
-  width: 333px;
-  height: 25px;
-  border-bottom: 1px solid #ccc;
+  border-top: 2px solid #ccc;
   text-align: center;
-  line-height: 30px;
 }
 
-.mail span {
-  width: 120px;
-  height: 16px;
-  padding: 0 10px;
-  color: #666;
+.scu p:nth-child(1) {
+  font-size: 30px;
+  margin-top: 100px;
 }
 
-.mail span:hover {
-  background-color: #000;
-  color: #fff;
-  border-radius: 5px 5px 0 0;
-}
-
-.login p {
-  padding-left: 14px;
-  margin-top: 33px;
-}
-
-.login .input input {
-  width: 211px;
-  height: 30px;
-  padding-left: 14px;
-}
-
-.login p:nth-child(2) {
-  padding-left: 24px;
-  margin-top: 26px;
-}
-
-.error {
-  padding-left: 55px;
-}
-
-.y_mail {
-  position: absolute;
-  top: 88px;
-  right: 23px;
+.scu p:nth-child(2) button a {
   display: inline-block;
-  width: 70px;
-  height: 25px;
+  color: #fff;
+}
+
+.scu p:nth-child(2) button {
+  background-color: #C90002;
   text-align: center;
-  line-height: 25px;
-  font-size: 12px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-}
-
-.login p:nth-child(3) {
-  padding-left: 36px;
-}
-
-.login p:nth-child(5) {
-  padding-left: 60px;
-}
-
-.login p:nth-child(6) {
-  padding-left: 73px;
-}
-
-.login p:nth-child(6) a {
-  text-decoration: none;
-  color: #fff;
-}
-
-.login p:nth-child(6) button {
-  width: 210px;
+  width: 100px;
   height: 30px;
-  background-color: #CF0101;
-  color: #fff;
-  border: 0;
-}
-
-.login p:nth-child(7) {
-  padding-left: 192px;
-}
-
-.login p:nth-child(7) > a {
-  color: #BA8668;
-  text-decoration: underline;
-}
-
-.login p:nth-child(8) {
-  border-top: 1px solid #ccc;
-  padding-top: 25px;
-  padding-left: 62px;
-}
-
-.login p:nth-child(8) > a {
-  color: red;
+  margin-top: 40px;
 }
 
 .footer {
