--- a/src/sass/reg.scss
+++ b/src/sass/reg.scss
@@ -280,17 +280,18 @@
 	.login .input input{
 		width: 211px;
 		height: 30px;
-	}
-	//邮箱
-	.login p:nth-child(2){
 		padding-left: 14px;
+	}
+	//用户名
+	.login p:nth-child(2){
+		padding-left: 24px;
 		margin-top: 26px;
 
 	}
-	//验证邮箱
-	.username{
-		position: relative;
+	.error{
+		padding-left: 55px;
 	}
+	
 	.y_mail{
 		position: absolute;
 		top: 88px;right: 23px;
@@ -320,6 +321,10 @@
 	.login p:nth-child(6){
 		padding-left: 73px;
 	}
+	.login p:nth-child(6) a{
+		text-decoration: none;
+		color:#fff;
+	}
 	.login p:nth-child(6) button{
 		width: 210px;
 		height: 30px;
@@ -344,8 +349,6 @@
 	.login p:nth-child(8)>a{
 		color:red;
 	}
-
-
 
 //footer
 
