--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -480,7 +480,6 @@
 		display: block;
 	}
 
-
 //轮播图,h:520,all
 	.banner{
 		width: 100%;
@@ -1908,7 +1907,31 @@
 		background-color: #ccc;
 		color:#fff;
 	}
-	
+	.t01_0,.t02_0{
+		display: none;
+		position: absolute;
+		right: 36px;
+		top: 0;
+		width: 100px;
+		height: 34px;
+		border:1px solid #ccc;
+		background-color: #fff;
+		font-size: 14px;
+	}
+	.ad_r  .t01:hover .t01_0{
+		background-color: #ccc;
+		color:#fff;
+		display: block;
+		line-height: 36px;
+		text-align: center;
+	}
+	.ad_r  .t02:hover .t02_0{
+		background-color: #ccc;
+		color:#fff;
+		display: block;
+		line-height: 36px;
+		text-align: center;
+	}
 	.t01{
 		position: absolute;
 		top: 0;
@@ -1918,6 +1941,9 @@
 		background-color: #FFBA00;
 		text-align: center;
 	}
+	
+	
+
 	.t02{
 		position: absolute;
 		top: 36px;
