--- a/src/sass/page2.scss
+++ b/src/sass/page2.scss
@@ -480,7 +480,7 @@
 			display: block;
 		}
 
-/*列表页*/
+//分页加载
 	#datalist{
 		border:1px solid #ddd;
 		padding:15px;
@@ -533,6 +533,37 @@
 		background-color:#fc0;
 		color:#fff;
 	}
+
+//懒加载
+		// .datalist li{
+		// 	float: left;
+		// 	padding:15px 5px;
+		// 	border-bottom:1px dotted #ccc;
+		// 	width: 300px;
+		// 	height: 300px;
+		// }
+		// .datalist img{
+		// 	width: 200px;
+		// 	height: 200px;
+		// 	background-size:100% 100%;
+		// }
+		// .datalist li h4{
+		// 	margin:0;
+		// }
+		// .page span{
+		// 	display:inline-block;
+		// 	margin:5px;
+		// 	width:40px;
+		// 	line-height:1.8;
+		// 	text-align: center;
+		// 	background-color:#dfdfdf;
+		// 	color:#666;
+		// }
+		// .page span.active{
+		// 	background-color:#fc0;
+		// 	color:#fff;
+		// }
+
 
 //2
 	//footer
